--- a/line.html
+++ b/line.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Administration</title>
+    <title>Line</title>
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
