--- a/line.html
+++ b/line.html
@@ -19,7 +19,7 @@
         <button onClick="remove()" type="submit">Remove</button>
     </div>
 
-    <script src="./js/main.js"></script>
+    <script src="./js/line.js"></script>
 </body>
 
 </html>
