--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </form>
     </div>
 
-    <script src="./js/main.js"></script>
+    <script src="./js/administration.js"></script>
 </body>
 
 </html>
