fix submit functions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form class="add-items">
             <input type="text" name="client" placeholder="Client Name" required />
             <input type="text" name="specialist" placeholder="Specialist name" required />
-            <button onClick="addItem2()" type="submit">Add Item</button>
+            <button onClick="submitClient()" type="submit">Add Item</button>
         </form>
     </div>
 
