--- a/line.html
+++ b/line.html
@@ -16,7 +16,7 @@
                 <li>Loading clients...</li>
             </div>
         </div>
-        <button onClick="remove()" type="submit">Remove</button>
+        <button id="button">Remove</button>
     </div>
 
     <script src="./js/line.js"></script>
