--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Administration</title>
+    <title> </title>
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
