--- a/linePage.html
+++ b/linePage.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="reload" class="wrapper">
+    <div class="wrapper">
         <h2>LINE</h2>
         <p></p>
         <div class="clients">
