add JSON file, fix html and css

--- a/linePage.html
+++ b/linePage.html
@@ -11,14 +11,17 @@
     <div class="wrapper">
         <h2>LINE</h2>
         <p></p>
-        <div class="clients">
+        <div class="dummyClients">
             <div class="flex">
-                <li>Loading clients...</li>
+                <li></li>
             </div>
         </div>
-        <button id="button">Remove</button>
+        <div class="clients">
+            <div class="flex">
+                <li></li>
+            </div>
+        </div>
     </div>
-
     <script src="./js/line.js"></script>
 </body>
 
