--- a/specialistPage.html
+++ b/specialistPage.html
@@ -11,9 +11,14 @@
     <div class="wrapper">
         <h2>LINE</h2>
         <p></p>
+        <div class="dummyClients">
+            <div class="flex">
+                <li></li>
+            </div>
+        </div>
         <div class="clients">
             <div class="flex">
-                <li>Loading clients...</li>
+                <li></li>
             </div>
         </div>
         <button id="button">Remove</button>
