--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+    <ul class="navigation__block">
+        <li class="navigation__list"><a class="active" href="index.html">Home</a></li>
+        <li class="navigation__list"><a href="linePage.html">Line</a></li>
+        <li class="navigation__list"><a href="specialistPage.html">Specialist page</a></li>
+    </ul>
     <div class="wrapper">
         <h2>ADD CLIENTS</h2>
         <p></p>
