--- a/specialistPage.html
+++ b/specialistPage.html
@@ -8,17 +8,21 @@
 </head>
 
 <body>
+    <ul class="navigation__block">
+        <li class="navigation__list"><a class="active" href="index.html">Home</a></li>
+        <li class="navigation__list"><a href="linePage.html">Line</a></li>
+        <li class="navigation__list"><a href="specialistPage.html">Specialist page</a></li>
+    </ul>
     <div class="wrapper">
         <h2>LINE</h2>
-        <p></p>
         <div class="dummyClients">
             <div class="flex">
-                <li></li>
+                <li class="clientList"></li>
             </div>
         </div>
         <div class="clients">
             <div class="flex">
-                <li></li>
+                <li class="clientList"></li>
             </div>
         </div>
         <button id="button">Remove</button>
